"Updated logging levels and added Swagger Documentation
The logging level was adjusted to INFO, reducing log verbosity. Swagger documentation option was added to enable better API visualization and testing. For the user controller, security restrictions were temporarily removed to ease development testing. Database URL in dev properties updated to localhost. Security dependency has been commented out in pom.xml and Swagger dependency has been added. A new SwaggerConfig file has been created to set up Swagger documentation."

--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
         <dependency>
@@ -103,6 +103,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
