--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 project.image=images/
-logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=INFO
 spring.profiles.active=dev
+springfox.documentation.swagger-ui.enabled=true
