--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://mysql:3306/mydatabase
+spring.datasource.url=jdbc:mysql://localhost:3307/mydatabase
 spring.datasource.username=myuser
 spring.datasource.password=mypassword
 spring.jpa.show-sql=true
